--- a/index.html
+++ b/index.html
@@ -1,22 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <title>React App</title>
-    <script defer="defer" src="/static/js/main.e8f827d2.js"></script>
-    <link href="/static/css/main.acef2e31.css" rel="stylesheet" />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/pre-prod.non-logged-user/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/pre-prod.non-logged-user/logo192.png"/><link rel="manifest" href="/pre-prod.non-logged-user/manifest.json"/><title>React App</title><script defer="defer" src="/pre-prod.non-logged-user/static/js/main.41356e76.js"></script><link href="/pre-prod.non-logged-user/static/css/main.9017ecf6.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
